# it-job-radar

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: refresh.yml
data/normalization/: tech_aliases.yaml
docs/: index.html
docs/research/: data-sources.md
notebooks/: 01_analysis.ipynb
src/it_job_radar/: __init__.py  analyze.py  config.py  db.py  normalize.py  pipeline.py  report.py
src/it_job_radar/collect/: __init__.py  theprotocol.py
tests/: test_analyze.py  test_collect.py  test_db.py  test_normalize.py
