[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "it-job-radar"
version = "0.1.0"
description = "Pipeline collecting Polish IT job offers — technology trends and salary ranges"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "requests>=2.32,<3",
    "pandas>=2.2,<3",
    "numpy>=1.26,<3",
    "matplotlib>=3.9,<4",
    "seaborn>=0.13,<0.14",
    "pyyaml>=6.0,<7",
    "rapidfuzz>=3.9,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "jupyterlab>=4.2,<5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
